cmake_minimum_required(VERSION 3.0.0)
project(YJSP VERSION 0.1.0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=armv7-a")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lz -lpthread -Wl,-rpath -Wl,/opt/intel/openvino/inference_engine/lib/armv7l")
set(OpenCV_DIR "/opt/intel/openvino/opencv/cmake")
find_library(WIRING wiringPi)
add_subdirectory(thirdparty/RaspberryPiRC/RPiIBus)
add_subdirectory(thirdparty/RaspberryPiMPU/src)
add_subdirectory(thirdparty/QRModule/src)
add_subdirectory(thirdparty/RuModule/SRC/_VisionBase)
add_subdirectory(thirdparty/RuModule/SRC/MessageController)
aux_source_directory("thirdparty/EKFImp/src/." EKFLIB)
add_executable(TrackedCar main.cpp pca9685.c YJSP_Schedule.cpp ${EKFLIB})
target_link_libraries(TrackedCar Ibus)
target_link_libraries(TrackedCar ${WIRING})
target_link_libraries(TrackedCar RPiMPU)
target_link_libraries(TrackedCar qrscanner)
target_link_libraries(TrackedCar VisionBase)
target_link_libraries(TrackedCar MessageController)
